--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -72,7 +72,7 @@
 ========================================================================== */
 @import "components/social-icons";
 @import "components/excerpt";
-@import "components/user-meta";
+@import "components/sheets";
 @import "components/contact-form";
 @import "components/single-form";
 @import "components/pagination";
