--- a/src/sass/core/buttons.scss
+++ b/src/sass/core/buttons.scss
@@ -17,9 +17,11 @@ button {
 	border: none;
 	background-color: transparent;
 	padding: 0;
-	color: $button-color;
+	color: $white;
 	cursor: pointer;
 }
+
+
 
 .btn,
 .button,
@@ -28,16 +30,16 @@ button {
 	display: inline-block;
 	flex-shrink: 0;
 	min-width: 8rem;
-	border: 2px solid $button-border;
+	border: 2px solid $link-color;
 	border-radius: $round;
-	background-color: $button-bg;
+	background-color: $link-color;
 	padding: 0.5rem 1.4rem;
 	letter-spacing: 2px;
 	line-height: 1;
 	font-family: $link-font;
 	font-size: 0.8rem;
 	font-weight: bold;
-	color: $button-color;
+	color: $white;
 	text-align: center;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -51,9 +53,9 @@ button {
   	&:hover,
   	&:focus {
   	  	outline: none;
-  	  	border-color: $button-hover-border;
-		background-color: $button-hover-bg;
-		color: $button-hover-color;
+  	  	border-color: $link-hover;
+		background-color: $link-hover;
+		color: $white;
 	}
 
 	&[disabled] {
@@ -63,9 +65,9 @@ button {
 		&:hover,
 		&:focus {
 			outline: none;
-			border-color: $button-border;
-			background-color: $button-bg;
-			color: $button-color;
+			border-color: $link-color;
+			background-color: $link-color;
+			color: $white;
 		}
 	}
 }
@@ -85,7 +87,7 @@ button {
 
 	/* rounded button */
 	&--rounded {
-		border-radius: 0.2em;
+		border-radius: 0.3em;
 	}
 		
 	/* pill button */
@@ -95,17 +97,17 @@ button {
 
 	/* border button */
 	&--border {
-		border-color: $button-border;
+		border-color: $link-color;
 		background: transparent;
 		padding: 0.55rem 1.4rem;
 		font-size: 0.7rem;
-		color: $button-border;
+		color: $link-color;
 		
 		&:hover,
 		&:focus {
-			border-color: $button-hover-border;
-			background-color: $button-hover-bg;
-			color: $button-hover-border;
+			border-color: $link-hover;
+			background-color: $link-hover;
+			color: $white;
 		}
 	}
 
