--- a/src/sass/modules/transcription/geo-text.scss
+++ b/src/sass/modules/transcription/geo-text.scss
@@ -1,6 +1,6 @@
 .geo-text {
 	text-transform: uppercase;
-	font-size: $font-size;
+	font-size: $font-size-sm;
 	font-family: $geometric;
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 }
