--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -73,6 +73,9 @@
 @import "components/social-icons";
 @import "components/excerpt";
 @import "components/sheets";
+@import "components/character-sheets";
+@import "components/character-header";
+@import "components/character-skills";
 @import "components/contact-form";
 @import "components/single-form";
 @import "components/pagination";
