--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -74,7 +74,9 @@
 @import "components/excerpt";
 @import "components/sheets";
 @import "components/character-sheets";
+@import "components/character-card";
 @import "components/character-header";
+@import "components/character-abilities";
 @import "components/character-skills";
 @import "components/contact-form";
 @import "components/single-form";
