--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -72,6 +72,7 @@
 ========================================================================== */
 @import "components/social-icons";
 @import "components/excerpt";
+@import "components/new-character-form";
 @import "components/sheets";
 @import "components/character-sheets";
 @import "components/character-card";
