--- a/src/sass/components/character-card.scss
+++ b/src/sass/components/character-card.scss
@@ -4,11 +4,25 @@
 |––––––––––––––––––––––––––––––––––––––––––––––––––
 */
 
+.cards-row {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	margin: -1rem;
+
+	.cards__item {
+		margin: 1rem;
+	}
+}
+
 .character-card {
 	display: flex;
 	flex-flow: column;
+	justify-content: space-between;
 	position: relative;
 	transform: translate(0, -0.1%) scale(1.001);
+	max-width: 12rem;
+	width: 100%;
 	max-width: 16rem;
 	border-radius: 0.6rem;
 	overflow: hidden;
@@ -48,7 +62,7 @@
 
 	&__content {
 		display: flex;
-		align-items: flex-end;
+		flex-flow: column;
 		padding: 1rem;
 	}
 
@@ -62,6 +76,57 @@
 			line-height: 0;
 			font-size: 2.4rem;
 			font-family: $heading-font;
+		}
+	}
+}
+
+.add-new-character {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	border-radius: 0.6rem;
+	border: 2px solid $cloud;
+	max-width: 12rem;
+	width: 100%;
+	max-width: 16rem;
+	min-height: 14rem;
+
+	$self: &;
+
+	&:hover {
+		#{$self}__icon {
+			background-color: $cloud;
+		}
+	}
+
+	&__icon {
+		border-radius: 50%;
+		width: 4rem;
+		height: 4rem;
+		background-color: $off-white;
+		color: $link-color;
+		transition: background 300ms ease-in-out,
+					color 300ms ease-in-out;
+
+		&::before,
+		&::after {
+			display: block;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			border-radius: $round;
+			background-color: currentColor;
+			content: '';
+		}
+		&::before {
+			width: 2rem;
+			height: 0.3rem;
+		}
+		&::after {
+			width: 0.3rem;
+			height: 2rem;
 		}
 	}
 }
