--- a/src/sass/utility/width.scss
+++ b/src/sass/utility/width.scss
@@ -35,23 +35,27 @@
 // 1
 .w-100 { width: 100%; }
 // 7/8
-.w-87 { width: 87.5% }
+.w-87 { width: 87.5%; }
 // 3/4
 .w-75 { width: 75%; }
 // 2/3
 .w-66 { width: 66.666666%; }
 // 5/8
-.w-62 { width: 62.5% }
+.w-62 { width: 62.5%; }
 // 1/2
 .w-50 { width: 50%; }
 // 3/8
-.w-37 { width: 37.5% }
+.w-37 { width: 37.5%; }
 // 1/3
 .w-33 { width: 33.333333%; }
 // 1/4
 .w-25 { width: 25%; }
+// 1/5
+.w-20 { width: 20%; }
+// 1/6
+.w-16 { width: 16.666666%; }
 // 1/8
-.w-12 { width: 12.5% }
+.w-12 { width: 12.5%; }
 
 @include below(tablet) {
 	.mb\: {
