Working on server stuffs

--- a/src/sass/components/character-card.scss
+++ b/src/sass/components/character-card.scss
@@ -20,7 +20,7 @@
 	flex-flow: column;
 	justify-content: space-between;
 	position: relative;
-	transform: translate(0, -0.1%) scale(1.001);
+	// transform: translate(0, -0.1%) scale(1.001);
 	max-width: 12rem;
 	width: 100%;
 	max-width: 16rem;
