--- a/src/sass/modules/header.scss
+++ b/src/sass/modules/header.scss
@@ -18,9 +18,10 @@ $nav-bg: $primary-dark;
 	justify-content: space-between;
 	align-items: center;
 	box-shadow: 0 0 10px 3px $text-color;
+	border-bottom: 1px solid $nav-bg;
 	height: $header-ht;
-	padding: 1rem;
 	background-color: $nav-bg;
+	padding: 1rem;
 	color: $white;
 
 	#logo {
