--- a/src/sass/core/body.scss
+++ b/src/sass/core/body.scss
@@ -46,6 +46,7 @@ body {
 	width: 100%;
 	max-width: 100vw;
 	min-height: 100vh;
+	overflow-x: hidden;
 
 	& > .viewable {
 		flex: 1;
@@ -71,9 +72,10 @@ body {
 		position: fixed;
 		top: 0;
 		width: 100vw;
+		height: $header-ht;
 	
 		& + .viewbox {
-			margin-top: $header-ht;
+			top: $header-ht;
 		}
 	}
 }
